# stock_sentiment

./: .env  .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
notebooks/: data_extraction.ipynb  database.ipynb  langchain_example.ipynb
src/: app.py  config_entity.py
src/artifacts/data_ingestion/: news_articles.pkl
src/artifacts/sentiment/: news_llm_sentiment.pkl  news_sentiment.pkl
src/components/: data_ingestion.py  database.py  sentiment_analysis.py
src/config/: configuration.py
src/constants/: __init__.py
src/pages/: news_extractor.py  sentiment.py
src/pipeline/: data_ingestion_pipeline.py  sentiment_analysis_pipeline.py
src/scripts/: setup_database.py
src/utils/: common.py
